--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(pskda_aicd)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(pskda_aicd sem/bTree.cpp)
+add_executable(pskda_aicd sem2/Levenshtein.cpp)
